--- a/config.yml
+++ b/config.yml
@@ -1,21 +1,21 @@
 --- 
+qa: 
+  app_revision: test_qa_tag1
+beta: 
+  app_revision: 
 production: 
   app_revision: 1.1.0_RC_0
-beta: 
-  app_revision: test_rc_tag
-qa: 
-  app_revision: test_qa_tag
-nightly: 
-  app_revision: 1.1.1_B_80_parent_changes
-testing: 
-  app_revision: master
 development: 
   app_revision: 1.1.1_D_25
-preview: 
-  app_revision: 1.1.2-production
+testing: 
+  app_revision: master
+nightly: 
+  app_revision: 1.1.1_B_80_parent_changes
 cucumber: 
   app_revision: 1.1.0_D_0
-test: 
-  app_revision: 1.1.0_D_0
+preview: 
+  app_revision: 1.1.2-production
 staging: 
+  app_revision: 1.1.0_D_0
+test: 
   app_revision: 1.1.0_D_0
