--- a/config.yml
+++ b/config.yml
@@ -1,21 +1,21 @@
 --- 
-qa: 
-  app_revision: 2.0.0_B_16
-beta: 
-  app_revision: 2.0.0_RC_4
 production: 
   app_revision: 1.1.0_RC_0
-development: 
-  app_revision: 1.1.1_D_25
+beta: 
+  app_revision: 2.0.0_RC_4
+qa: 
+  app_revision: 2.0.0_B_16
+nightly: 
+  app_revision: TEST_NIGHTLY_TAG
 testing: 
   app_revision: master
-nightly: 
-  app_revision: 1.1.1_B_80_parent_changes
-cucumber: 
-  app_revision: 1.1.0_D_0
+development: 
+  app_revision: 1.1.1_D_25
 preview: 
   app_revision: 1.1.2-production
-staging: 
+cucumber: 
   app_revision: 1.1.0_D_0
 test: 
+  app_revision: 1.1.0_D_0
+staging: 
   app_revision: 1.1.0_D_0
