--- a/rake_tasks.yml
+++ b/rake_tasks.yml
@@ -8,6 +8,8 @@ beta:
 qa:
   completed_tasks:
   yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 nightly:
   completed_tasks:
   yet_to_run:
@@ -17,25 +19,41 @@ testing:
   completed_tasks: 
   - rake db:migrate --trace
   - rake db:version --trace
-  yet_to_run: 
+  yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 development: 
   completed_tasks:
   yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 preview:
   completed_tasks:
   yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 cucumber: 
   completed_tasks:
   yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 test:
   completed_tasks:
   yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 staging:
   completed_tasks:
   yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 app:
   completed_tasks:
   yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 qa2:
   completed_tasks:
   yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
