task related to currency scope add to beta and production envPT#5135548

--- a/rake_tasks.yml
+++ b/rake_tasks.yml
@@ -16,10 +16,14 @@ qa:
   - rake setup_payment_currency:create --trace
 beta: 
   completed_tasks: 
-  yet_to_run: 
+  yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 production: 
   completed_tasks: 
-  yet_to_run: 
+  yet_to_run:
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 development: 
   completed_tasks: 
   yet_to_run: 
