--- a/rake_tasks.yml
+++ b/rake_tasks.yml
@@ -8,6 +8,8 @@ qa2:
 qa:
   completed_tasks: 
   yet_to_run: 
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace
 beta:
   completed_tasks: 
   yet_to_run:
