--- a/rake_tasks.yml
+++ b/rake_tasks.yml
@@ -2,9 +2,13 @@
 app: 
   completed_tasks: 
   yet_to_run: 
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace      
 qa2:
   completed_tasks: 
   yet_to_run: 
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace      
 qa:
   completed_tasks: 
   yet_to_run: 
@@ -50,6 +54,8 @@ preview:
 staging: 
   completed_tasks: 
   yet_to_run: 
+  - rake setup_payment_currency:update --trace
+  - rake setup_payment_currency:create --trace      
 test: 
   completed_tasks: 
   yet_to_run: 
