--- a/rake_tasks.yml
+++ b/rake_tasks.yml
@@ -3,33 +3,39 @@ app:
   completed_tasks: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
-  yet_to_run: 
+  yet_to_run:
+  - rake rake_migration:skip_initial_load --trace
 qa2: 
   completed_tasks: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
-  yet_to_run: 
+  yet_to_run:
+  - rake rake_migration:skip_initial_load --trace
 qa: 
   completed_tasks: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
   - rake setup_payment_currency:create --trace
-  yet_to_run: 
+  yet_to_run:
+  - rake rake_migration:skip_initial_load --trace
 beta: 
   completed_tasks: 
   yet_to_run: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
+  - rake rake_migration:skip_initial_load --trace
 production: 
   completed_tasks: 
   yet_to_run: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
+  - rake rake_migration:skip_initial_load --trace
 development: 
   completed_tasks: 
   yet_to_run: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
+  - rake rake_migration:skip_initial_load --trace
 testing: 
   completed_tasks: 
   - rake db:migrate --trace
@@ -37,30 +43,36 @@ testing:
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
   - rake setup_payment_currency:create --trace
-  yet_to_run: 
+  yet_to_run:
+  - rake rake_migration:skip_initial_load --trace
 nightly: 
   completed_tasks: 
   yet_to_run: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
+  - rake rake_migration:skip_initial_load --trace
 cucumber: 
   completed_tasks: 
   yet_to_run: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
+  - rake rake_migration:skip_initial_load --trace
 preview: 
   completed_tasks: 
   yet_to_run: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
+  - rake rake_migration:skip_initial_load --trace
 staging: 
   completed_tasks: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
   - rake setup_payment_currency:create --trace
-  yet_to_run: 
+  yet_to_run:
+  - rake rake_migration:skip_initial_load --trace
 test: 
   completed_tasks: 
   yet_to_run: 
   - rake setup_payment_currency:update --trace
   - rake setup_payment_currency:create --trace
+  - rake rake_migration:skip_initial_load --trace
