updating the new revision number through nightly build

--- a/config.yml
+++ b/config.yml
@@ -5,25 +5,27 @@ qa2:
   app_revision: 2.1.0_B_9
 mnp: 
   app_revision: MNP_master
-qa: 
-  app_revision: 2.1.0_B_9
-beta: 
-  app_revision: 2.1.0_RC_7
 production: 
   app_revision: 1.1.0_RC_0
+beta: 
+  app_revision: 2.1.0_RC_7
+qa: 
+  app_revision: 2.1.0_B_9
 acsi: 
   app_revision: ACSI_master
-development: 
-  app_revision: 1.1.1_D_25
-testing: 
-  app_revision: master
+honorstudentapp: 
+  app_revision: honorstudentapp_test_tag
 nightly: 
   app_revision: TEST_NIGHTLY_TAG
-cucumber: 
-  app_revision: 1.1.0_D_0
+testing: 
+  app_revision: master
+development: 
+  app_revision: 1.1.1_D_25
 preview: 
   app_revision: 1.1.2-production
-staging: 
-  app_revision: 2.1.0_S_7
+cucumber: 
+  app_revision: 1.1.0_D_0
 test: 
   app_revision: 1.1.0_D_0
+staging: 
+  app_revision: 2.1.0_S_7
