--- a/config.yml
+++ b/config.yml
@@ -5,27 +5,27 @@ qa2:
   app_revision: 2.1.0_B_9
 mnp: 
   app_revision: MNP_master
-production: 
-  app_revision: 1.1.0_RC_0
-beta: 
-  app_revision: 2.1.0_RC_7
 qa: 
   app_revision: 2.1.0_B_9
+beta: 
+  app_revision: 2.1.0_RC_7
+production: 
+  app_revision: 1.1.0_RC_0
 acsi: 
   app_revision: ACSI_master
-honorstudentapp: 
-  app_revision: honorstudentapp_test_tag
-nightly: 
-  app_revision: TEST_NIGHTLY_TAG
-testing: 
-  app_revision: master
 development: 
   app_revision: 1.1.1_D_25
-preview: 
-  app_revision: 1.1.2-production
+testing: 
+  app_revision: master
+nightly: 
+  app_revision: TEST_NIGHTLY_TAG
+honorstudentapp: 
+  app_revision: 2.1.0_H_9
 cucumber: 
   app_revision: 1.1.0_D_0
-test: 
-  app_revision: 1.1.0_D_0
+preview: 
+  app_revision: 1.1.2-production
 staging: 
   app_revision: 2.1.0_S_7
+test: 
+  app_revision: 1.1.0_D_0
