--- a/rake_tasks.yml
+++ b/rake_tasks.yml
@@ -65,8 +65,6 @@ staging:
   - rake setup_payment_currency:create --trace
   - rake setup_payment_currency:create --trace
   yet_to_run: 
-test: 
+honorstudentapp: 
   completed_tasks: 
   yet_to_run: 
-  - rake setup_payment_currency:update --trace
-  - rake setup_payment_currency:create --trace
